Fix: Logo alignment to center, and margins between <p> and footer

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,7 +41,7 @@ body .bgimg {
 body .main-logo img {
   width: 8em;
   height: 8em;
-  margin: 13em 1em 0 6.5em;
+  margin: 14em 1em 0 1em;
   object-fit: contain; }
 
 body .main-font {
@@ -57,19 +57,21 @@ body .main-font {
 
 body .p-bottom {
   color: #eef2f4;
-  font-size: 0.8em;
+  font-size: 1em;
   line-height: 1.3;
-  margin: 4em 0 0 0; }
+  margin: 4.5em 0 0 0; }
 
 footer {
   background-color: #eef2f4;
   background: #eef2f4;
   padding: 0;
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0 0;
+  clear: both;
+  position: fixed;
+  bottom: 0; }
   footer img {
-    width: 9em;
+    width: 11em;
     height: 5.5em;
-    padding-bottom: 1.5em;
     object-fit: contain; }
 
 /*!
