--- a/src/scss/pages/_start-page.scss
+++ b/src/scss/pages/_start-page.scss
@@ -26,7 +26,7 @@ body {
         img {
             width: 8em;
             height: 8em;
-            margin: 13em 1em 0 6.5em;
+            margin: 14em 1em 0 1em;
             object-fit: contain;
         }
     }
@@ -46,9 +46,9 @@ body {
     }
     .p-bottom {
         color: $pale-grey;
-        font-size: 0.8em;
+        font-size: 1em;
         line-height: 1.3;
-        margin: 4em 0 0 0;
+        margin: 4.5em 0 0 0;
     }
 }
 
@@ -57,10 +57,12 @@ footer {
     background: $pale-grey;
     padding: 0;
     margin: 2em 0 0 0;
+    clear: both;
+    position: fixed;
+    bottom: 0;
     img {
-        width: 9em;
+        width: 11em;
         height: 5.5em;
-        padding-bottom: 1.5em;
         object-fit: contain;
     }
 }
